[package]
name = "mcp2517"
description = "Library for MCP2517 CAN controller"
keywords = ["MCP2517", "no_std", "CAN"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]
authors = ["AtlasAero GmbH <info@atlasaero.eu>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pegasus-aero/rt-mcp2517"
readme = "README.md"
documentation = "https://docs.rs/mcp2517"

[dependencies]
byteorder = { version = "^1.3.0", default-features = false }
bytes = { version = "1.6.0", default-features = false }
embedded-can = "0.4.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.1"
log = "0.4.17"
modular-bitfield-msb = "0.11.2"
serde = { version = "1.0.197", features = ["derive"], default-features = false }


[dev-dependencies]
mockall = "0.11.0"

[features]
default = ["example"]
# Mocks for doc examples
example = []

strict = []


